--- a/Vue/aprendendo_vue/package.json
+++ b/Vue/aprendendo_vue/package.json
@@ -11,8 +11,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "bootstrap": "^4.1.0",
-    "bootstrap-vue": "^2.21.2",
+    "@okta/okta-auth-js": "^4.8.0",
+    "@okta/okta-vue": "^1.0.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.0.0-rc.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
